# dallab_math_club

./: .gitignore  README.md  main.py  pyproject.toml
L01-PCA/: PCA.jl  pca.py  pca_jz.jl
L02-PLSR/: notes.md
